--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -3,18 +3,31 @@
     <!-- %%INSERT_PERMISSIONS -->
     <!-- %%INSERT_FEATURES -->
     <supports-screens android:anyDensity="true" android:largeScreens="true" android:normalScreens="true" android:smallScreens="true"/>
-    <application android:name="org.qtproject.qt.android.bindings.QtApplication" android:hardwareAccelerated="true" android:label="-- %%INSERT_APP_NAME%% --" android:requestLegacyExternalStorage="true" android:allowNativeHeapPointerTagging="false" android:allowBackup="true" android:fullBackupOnly="false">
-        <activity android:name="org.qtproject.qt.android.bindings.QtActivity" android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation|mcc|mnc|density" android:label="-- %%INSERT_APP_NAME%% --" android:launchMode="singleTop" android:screenOrientation="sensor" android:exported="true">
+    <application android:name="org.qtproject.qt.android.bindings.QtApplication" android:hardwareAccelerated="true" android:label="FirstYear" android:requestLegacyExternalStorage="true" android:allowNativeHeapPointerTagging="false" android:allowBackup="true" android:fullBackupOnly="false" android:icon="@mipmap/ic_launcher">
+        <activity android:name="org.qtproject.qt.android.bindings.QtActivity" android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation|mcc|mnc|density" android:label="FirstYear" android:launchMode="singleTop" android:screenOrientation="sensor" android:windowSoftInputMode="adjustResize"  android:exported="true" android:theme="@style/splashScreenTheme" android:icon="@mipmap/ic_launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+            <intent-filter>
+                 <action android:name="android.intent.action.SEND"/>
+                 <category android:name="android.intent.category.DEFAULT"/>
+                 <data android:mimeType="image/*"/>
+            </intent-filter>
             <meta-data android:name="android.app.lib_name" android:value="-- %%INSERT_APP_LIB_NAME%% --"/>
             <meta-data android:name="android.app.arguments" android:value="-- %%INSERT_APP_ARGUMENTS%% --"/>
             <meta-data android:name="android.app.extract_android_style" android:value="minimal"/>
+            <meta-data android:name="android.app.splash_screen_drawable" android:resource="@drawable/splashscreen"/>
+            <meta-data android:name="android.app.splash_screen_drawable_portrait" android:resource="@drawable/splashscreen_port"/>
+            <meta-data android:name="android.app.splash_screen_drawable_landscape" android:resource="@drawable/splashscreen_land"/>
         </activity>
+        <provider android:name="androidx.core.content.FileProvider" android:authorities="org.nshchapps.firstyear.shareutils.fileprovider" android:exported="false" android:grantUriPermissions="true">
+          <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/filepaths"/>
+        </provider>
     </application>
-    <!--uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-      <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/-->
+<!--uses-permission android:name="android.permission.WRITE_SOCIAL_STREAM"/-->
+<!--uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/-->
+<!--uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/-->
+<!--uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/-->
+<!--uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/-->
 </manifest>
