--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <!-- %%INSERT_FEATURES -->
     <supports-screens android:anyDensity="true" android:largeScreens="true" android:normalScreens="true" android:smallScreens="true"/>
     <application android:name="org.qtproject.qt.android.bindings.QtApplication" android:hardwareAccelerated="true" android:label="FirstYear" android:requestLegacyExternalStorage="true" android:allowNativeHeapPointerTagging="false" android:allowBackup="true" android:fullBackupOnly="false" android:icon="@mipmap/ic_launcher">
-        <activity android:name="org.qtproject.qt.android.bindings.QtActivity" android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation|mcc|mnc|density" android:label="FirstYear" android:launchMode="singleTop" android:screenOrientation="sensor" android:windowSoftInputMode="adjustResize"  android:exported="true" android:theme="@style/splashScreenTheme" android:icon="@mipmap/ic_launcher">
+        <activity android:name="org.qtproject.qt.android.bindings.QtActivity" android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation|mcc|mnc|density" android:label="FirstYear" android:launchMode="singleTop" android:screenOrientation="unspecified" android:windowSoftInputMode="adjustResize"  android:exported="true" android:theme="@style/splashScreenTheme" android:icon="@mipmap/ic_launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -27,7 +27,8 @@
     </application>
 <!--uses-permission android:name="android.permission.WRITE_SOCIAL_STREAM"/-->
 <!--uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/-->
-<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-<uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
-<uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+<!--uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/-->
+<!--uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/-->
+<!--uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/-->
+<!--uses-permission android:name="android.permission.READ_DEVICE_CONFIG"/-->
 </manifest>
