--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -37,10 +37,6 @@
           <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/filepaths"/>
         </provider>
     </application>
-<!--uses-permission android:name="android.permission.WRITE_SOCIAL_STREAM"/-->
-<!--uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/-->
-<!--uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/-->
-<!--uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/-->
-<!--uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/-->
-<!--uses-permission android:name="android.permission.READ_DEVICE_CONFIG"/-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+      <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 </manifest>
